[gd_scene load_steps=4 format=3 uid="uid://cflf3vwa1kmb2"]

[ext_resource type="Script" path="res://Player/Weapons/charged_blaster.gd" id="1_48de6"]
[ext_resource type="Texture2D" uid="uid://sw3knqg1x4to" path="res://Textures/test/sniper.png" id="2_qghy1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_emqbp"]
radius = 339.013

[node name="ChargedBlaster" type="Node2D" node_paths=PackedStringArray("gun_cooldownTimer")]
script = ExtResource("1_48de6")
gun_cooldownTimer = NodePath("ChargedBlastTimer")

[node name="ChargeTimer" type="Timer" parent="."]
one_shot = true

[node name="ChargedBlastTimer" type="Timer" parent="."]

[node name="DetectArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
light_mask = 4
visibility_layer = 4
shape = SubResource("CircleShape2D_emqbp")

[node name="GunSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_qghy1")

[connection signal="shoot" from="." to="." method="_on_shoot"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="ChargedBlastTimer" to="." method="_on_charged_blast_timer_timeout"]
